--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   --variant-font: 'Manrope', sans-serif;
 }
 
+
 .container {
   /* height: 100vh; */
   padding: 1rem;
@@ -36,6 +37,7 @@
   font-size: 1.5rem;
   font-weight: 800;
   margin: 20px 0;
+  color: var(--Dark-Desaturated-Blue);
 }
 
 .first__section {
@@ -50,8 +52,9 @@
 
 #first-text{
   font-family: var(--variant-font);
-  font-weight: 600;
+  font-weight: 400;
   font-size: 1rem;
+  color: var(--Text-grayish-blue);
 }
 
 .second__section {
@@ -68,6 +71,7 @@
   color: var(--Text-grayish-blue);
   background-color: var(--white);
   padding: 2rem 0;
+  margin-bottom: 1rem;
 }
 
 #title {
@@ -91,6 +95,12 @@
   color: var(--Text-grayish-blue);
   font-weight: 100;
   margin: auto 0;
+}
+
+#price-tag .price{
+  font-size: 1.3rem;
+  color: var(--Dark-Desaturated-Blue);
+  font-weight: 800;
 }
 
 .enabled-tag {
@@ -142,8 +152,12 @@
   padding: 5px 5px;
   border-radius: 20px;
   color: var(--Light-red);
-  font-weight: 900;
+  font-weight: 600;
   background-color: var(--Light-Grayish-Red);
+}
+
+div .discount-tag--disabled{
+  display: none;
 }
 
 #discount-title {
@@ -164,7 +178,7 @@
   flex-direction: column;
   gap: 0.5rem;
   font-family: var(--variant-font);
-  /* font-weight: 600; */
+  font-weight: 400;
 }
 
 #last--list span {
@@ -178,8 +192,7 @@
   border-radius: 35px;
   background-color: var(--Dark-Desaturated-Blue);
   color: var(--Pale-Blue);
-  font-family: var(--variant-font);
-  
+  font-family: var(--variant-font);  
 }
 
 .range--box {
