--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@
 .enabled-tag {
   cursor: pointer;
   display: block;
-  padding: 5px;
   height: 23px;
   width: 55px;
   display: flex;
@@ -126,27 +125,25 @@
   width: 15px;
   border-radius: 50%;
   background-color: white;
-  transform: translateX(0%);
-  transition: all .6s;
-  
-  /* margin-left: auto; */
+  transform: translateX(3px);
+  transition: all .6s;  
 }
 
 .enabled__btn__active {
-  transform: translateX(170%);
+  transform: translateX(230%);
 }
 
 #billing__duration {
   padding: 0 2px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  /* gap: 1rem; */
+   display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  place-items: center; 
   font-size: 0.8rem;
-  /* flex-wrap: wrap; */
   font-family: var(--variant-font);
   font-weight: 600;
 }
+
+
 
 #discount-tag {
   padding: 5px 5px;
@@ -154,10 +151,11 @@
   color: var(--Light-red);
   font-weight: 600;
   background-color: var(--Light-Grayish-Red);
+  transition: opacity 500ms;
 }
 
 div .discount-tag--disabled{
-  display: none;
+  opacity: 0;
 }
 
 #discount-title {
@@ -295,6 +293,8 @@ div .discount-tag--disabled{
 
   #billing__duration {
     grid-area: 3/1/3/3;
+    padding: 0.5rem 0;
+    grid-template-columns: 1fr 0.5fr 1fr 1fr;
   }
   #discount-title {
     display: inline;
