--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ div .discount-tag--disabled{
   box-shadow: 0px 10px 25px 10px var(--Soft-Cyan);
   position: relative;
   z-index: 10;
+  border: none;
 }
 
 .line {
